fixed align issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,3 +86,9 @@
 .comment-button {
   margin-left: 30px;
 }
+
+#line_ {
+  width:110px;
+  float:left;
+  margin-left:15px;
+ }
